<resources>
    <string name="app_name">Enthusia</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="basketball_details">I treated it like every day was my last day with a basketball. LeBron James Termed as the most fast-paced game as in this enthralling sport ,with one missed shot or lost footing, all the hard work and uphill struggle comes to an end in a blink of an eye.A game of tact and agility where the team of five is tighter than a fist, fighting till the end to win. Slam. Pass. Dribble. Shoot! A slam over our dreams, a pass onto reality and a dunk into turning one into the other. So dribble your way to the ENTHUSIA court !</string>
    <string name="event_cricket_details"><![CDATA[“I learned all about life with a ball at my feet” – Ronaldinho b        Perhaps the most popular sport worldwide ,it is a dynamic sport that demands peak physical performance and exceptional mental acuity,  a game that is simple in essence but complex in application. 22 people. 90 minutes. 1 ball that decides our fate. A game where you hold your breath till the last minute and push not just your legs, but your mind and soul till the culminating moment. In the end, it\'s not winning or losing that matters-it\'s the game. Come witness this magic here at enthusia!]]></string>

    <string name="cricket" translatable="false">Cricket</string>
    <string name="cricket_players" translatable="false">Multi_player</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="requests_count_badge" translatable="false">REQUESTS</string>
    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="weight_badge" translatable="false">WEIGHT</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledge_badge" translatable="false">PLEDGE</string>
    <string name="detailsbadge" translatable="false">Details</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">FROM</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="request_btn_text" translatable="false">REQUEST</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from1_mock">21st November 2017</string>
    <string name="content_from2_mock">21nd November 2017</string>
    <string name="content_to1_mock">22nd November 2017</string>
    <string name="content_to2_mock">22nd November 2017</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="football_details">“I learned all about life with a ball at my feet” – Ronaldinho b Perhaps the most popular sport worldwide ,it is a dynamic sport that demands peak physical performance and exceptional mental acuity, a game that is simple in essence but complex in application. 22 people. 90 minutes. 1 ball that decides our fate. A game where you hold your breath till the last minute and push not just your legs, but your mind and soul till the culminating moment. In the end, it\'s not winning or losing that matters-it\'s the game. Come witness this magic here at enthusia!</string>
    <string name="badminton_details">\'I love winning more than playing Badminton. Winning is everything\' ~SainaNehwal. Are you a winner? This fastest racquet sport puts all your body muscles under pressure. From smashes, fast drop shots , net shots, attacking lobs, quick low flicks to the fast pace footwork on the court, you need it all! So Run, fall, and get up again and score , so close to winning , every second matters. Don\'t get your feathers ruffled. The shuttle cock is coming for you. Rackets up! Enthusia has theirs.</string>
    <string name="chess_details">“Strategy requires thought, tactics require observation”. Time to put both sides of your brain to work, as Enthusia host one of the competitive Chess open in town. So Brace yourself and visualize your moves where some of the best chess players outplay each other. Quality chessboards and free food have marked our benchmarks. With Classical Chess, Enthusia 2k17 is all set to break the limits.</string>
    <string name="tabletennis_details">Table tennis is like an atom, to the ignorant it is merely microscopic and insignificant in existence,but to the dedicated it is intricate in design and the building block to everything we know . A game of speed,poise and precision. The arena might be small but the determination is not. Not a lot of equipment is needed but your skill needs to be high. A game where you outwit rather than outhit your opponent. An Ace: a serve that is unpassable, so is the opportunity provided by Enthusia to all the TT aces</string>
    <string name="kabaddi_details">How long can you hold your breath? This game requires the right mix and balance of core strength and agility. The guts play as much of a crucial role in performance, any fear in this sport will only bring you down. Do you have what it takes to raid like a raging bull, and be a pillar of strength to defend against the opposition? Team work and strategy goes a long way, and can take you to new heights. Come and test your guts, as your very own Enthusia provides you with an opportunity to shine in the limelight. KhelKabaddi with Enthusia2K17! #LePanga</string>
    <string name="tennis_details">It all starts with a point. A service or a return, a backhand or a forehand, a lob shot or a smash. Choices lead to decisions, and they determine your journey. A game in which athleticism will take you only half the way, rest is your mental strength. If you have what it takes to make it big, give it a shot as Enthusia welcomes you to show your mettle at one of the very few clay courts in India. Feel the French Open with Enthusia 2K17! \'If you\'re behind, focus on one point at a time. Don\'t focus on the score, don\'t focus on anything else. Just focus on that one sole point.\' - Serena Williams.</string>
    <string name="aquatics_details">\'You can\'t put a limit on anything. The more you dream, the farther you get.\' -Michael Phelps If you think your sport is hard, try doing it while you hold your breath. Aquatics in Enthusia promises to bring you a competitive and exhilarating experience. Feel your muscles burn and your lungs scream as every stroke spurs you to your victory. You never win against the water; you just get better every time.</string>
    <string name="carrom_details">A popular household sport , this borad game tests your deft fingers and thumbing technique. Strike out your opponents, pocket the carom men ,chase the queen and conquer the board. Put your knowledge of physics to use through this table game at Enthusia 2017- where you need to pot to give winning a shot. Come in a team of two (for doubles) or play the singles to see if you are the sharp shooter or the stylish cutter. Hands onboard!</string>
    <string name="throwball_details">Not merely a game of catch and throw, this deceiving game has much more to offer than what meets the eye! A simple game of complex dynamics , sharp focus and flawless team work. Flex your arm , adjust the trajectory to place the ball into the opponents blind spots! Think you have the arm strength ,the tact and the precision to cruise the team to victory?</string>
    <string name="rinkfootball_details">One ball 8 men, whole quad on the field. Yes, that\'s rink football. Ever longed to play football but never had the stamina? Come experience the same magic with rink football! The field might be small but the thrill is not. Kicks with measured power but increased precision ,temperatures soar like never before as for those all eyes stalk the ball like a hawk.</string>
    <string name="athletics_details">There are better starters than me but I\'m a strong finisher. Usain Bolt Keep calm and BOLT on! Run faster , leap higher and throw farther The oldest organized sport ,it tests your physical limits as you win through sheer spped stenghth and stamina.The event in Enthusia where the fast are the furious! Track your opponents and sieze the field ,the glory is all yours! A race amongst the quickest, where when their legs can\'t run anymore they run with their hearts</string>
    <string name="volleyball_details">Serve pass Attack! Block! Dig! Volleyball is essentially a game of transition from one of the above skills to the next, with choreographed team movement. This thrilling sport of Volleyball, is no less than a war !Enthusia proudly volleys the opportunity to young champions to play this enthralling sport! Do you have what it takes to Block the toughest attacks or Assist the chance for the best digs? Remember every point counts. It\'s not just a game. It\'s an emotion. The key is not the “will to win”—everybody has that. It is the will to prepare to win that is important. ~Bobby Knight</string>
    <string name="khokho_details">Don\'t be fooled by its simplicity and inexpensiveness. Enthusia gives you a chance to relive your childhood memories! This game demands physical fitness, speed and stamina. To catch by pursuit- to chase rather than just run is the capstone of Kho-Kho. The game develops qualities such as obedience, discipline, sportsmanship and loyalty between team members. Dodging, feinting and controlled bursts of speed makes this sport quite a spectacle and electrifying to play.</string>
    <string name="title_activity_maps">Map</string>
    <string name="mnc_details">Enthusia, in collaboration with an NGO organises a MARATHON to support and reinforce the initiative. On the same lines as MARATHON, Enthusia organises CYCLOTHON to spread awareness about fitness and health.</string>
    <string name="drawer_events_string">Events</string>
    <string name="drawer_cup_string">Cup</string>
    <string name="drawer_about_us_string">About Us</string>
    <string name="drawer_feed_string">Feed</string>
    <string name="drawer_sponsors_string">Sponsors</string>
    <string name="drawer_register_string">Sign Up</string>
    <string name="drawer_login_string">Login</string>
    <string name="drawer_enba_string">EnBA!</string>
    <string name="pool_A_string"> Pool A </string>
    <string name="pool_B_string"> Pool B </string>
    <string name="stats_default"> Lebron James \t 100(1)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pointsURL">http://enthusia.org/app/points.json</string>
    <string name="fixturesURL">http://enthusia.org/app/fixtures.json</string>
</resources>
