<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/menu_top">
        <item
            android:id="@+id/drawer_events"
            android:icon="@drawable/soccer"
            android:title="@string/drawer_events_string" />
        <item
            android:id="@+id/drawer_cup"
            android:icon="@drawable/trophy"
            android:title="@string/drawer_cup_string" />

        <item
            android:id="@+id/drawer_about_us"
            android:icon="@drawable/aboutus_icon"
            android:title="@string/drawer_about_us_string" />

        <item
            android:id="@+id/drawer_feed"
            android:icon="@drawable/rss"
            android:title="@string/drawer_feed_string" />

        <item
            android:id="@+id/drawer_sponsors"
            android:icon="@drawable/deal"
            android:title="@string/drawer_sponsors_string" />
    </group>
    <group android:id="@+id/menu_bottom">
        <item
            android:id="@+id/drawer_register"
            android:title="@string/drawer_register_string" >
        </item>
        <item
            android:id="@+id/drawer_login"
            android:title="@string/drawer_login_string">
        </item>
    </group>
</menu>